major refactoring and cleanup: removed Guice dependency, removed ClassGraph, removed para-jar sub-project, added native-image support and reachability-metadata.json